--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # mysql
-DATABASE_URL=mysql://root:123456@localhost:3306/ai_news?charset=utf8mb4_unicode_ci&connectionLimit=100&flags=-FOUND_ROWS
+DATABASE_URL=mysql://root:123456@localhost:3306/mp3Online?charset=utf8mb4_unicode_ci&connectionLimit=100&flags=-FOUND_ROWS
+PORT=3001
