create album page

--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
 PORT=3001
 NODE_ENV=prod
 # mysql
-DATABASE_URL=mysql://root:123456@localhost:3306/kmp3?charset=utf8mb4_unicode_ci&connectionLimit=100&flags=-FOUND_ROWS
+DATABASE_URL=mysql://root:gn1C4IrvFiGesuwK@52.231.160.42:3306/mp3Online?charset:utf8mb4_unicode_ci&connectionLimit:10&flags:-FOUND_ROWS
 # redis
 # elasticsearch
