--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # mysql
-DATABASE_URL=mysql://root:123456@localhost:3306/mp3Online?charset=utf8mb4_unicode_ci&connectionLimit=100&flags=-FOUND_ROWS
+DATABASE_URL=mysql://root:gn1C4IrvFiGesuwK@52.231.160.42:3306/mp3Online?charset:utf8mb4_unicode_ci&connectionLimit:10&flags:-FOUND_ROWS
 PORT=3001
