--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
     "cors": "^2.8.5",
+    "crypto-js": "^3.1.9-1",
     "dotenv": "^7.0.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
     "http-errors": "^1.7.3",
     "jsonwebtoken": "^8.5.0",
+    "jsrsasign": "^8.0.12",
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "request": "^2.88.0",
+    "unix-timestamp": "^0.2.0",
     "uuid": "^3.3.3",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.10.0"
