--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # mysql
-DATABASE_URL=mysql://root:gn1C4IrvFiGesuwK@128.199.239.13:3306/mp3Online?charset:utf8mb4_unicode_ci&connectionLimit:10&flags:-FOUND_ROWS
+DATABASE_URL=mysql://root:123567890@103.142.26.130:4306/kmp3?charset:utf8mb4_unicode_ci&connectionLimit:10&flags:-FOUND_ROWS&dateStrings=true&timezone=utc+7
 PORT=3002
