--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^7.4.0",
-    "bcrypt": "^3.0.6",
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^7.0.0",
